# customer-service-llm

./: Book1.xlsx  README.md  answer_generator.py  dataset.xlsx  description_feature_processor.py  items.txt  json_fix.py  json_to_excel.py  output_products.xlsx  processed_products_data_clean.xlsx  products_data.xlsx  products_data_1.xlsx  products_data_1_processed.xlsx  questions.md  scraper.py  ~$processed_products_data_clean.xlsx
benchmark/: .env.example  .env.template  .gitignore  README.md  all_products_list.json  analyze_malicious_attacks.py  analyze_malicious_prompts.py  evaluate_results.py  evaluate_results_new.py  pyproject.toml  requirements.txt  run_benchmark.py  scenarios_polish_100.json  scenarios_test_10.json  start_improved_mcp.py  visualization_dashboard.py
benchmark/.claude/: settings.local.json
benchmark/config/: models_openrouter.yaml
benchmark/dashboard/: evaluation_summary.csv
benchmark/data/: products.db
benchmark/src/benchmark/: executor.py  models.py
benchmark/src/database/: connection.py  models.py  seed.py
benchmark/src/evaluation/: hybrid_evaluator.py  judge.py  models.py  multi_judge.py
benchmark/src/mcp/: improved_server.py
benchmark/src/providers/: base.py  openrouter_provider.py  provider_factory.py  replicate_provider.py
benchmark/src/scenarios/: generator.py  models.py  templates.py  templates_polish.py
benchmark/src/utils/: reporting.py
other/: processed_products_data_2.xlsx  processed_products_data_2_processed.xlsx  processed_products_data_clean.xlsx  processed_products_data_clean_test.xlsx  products_data.csv  (+2 more)
(+311 files in other folders)
